Initial DataService project structure

--- a/src/DataServiceConsole/DataServiceConsole.csproj
+++ b/src/DataServiceConsole/DataServiceConsole.csproj
@@ -5,4 +5,15 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AWSSDK.TimestreamWrite" Version="3.5.1.23" />
+    <PackageReference Include="DryIoc.dll" Version="4.7.2" />
+    <PackageReference Include="System.CommandLine" Version="2.0.0-beta1.20574.7" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\AWSDataService\AWSDataService.csproj" />
+    <ProjectReference Include="..\DataServiceCore\DataServiceCore.csproj" />
+  </ItemGroup>
+
 </Project>
