WIP: Steam integration

--- a/src/DataServiceConsole/DataServiceConsole.csproj
+++ b/src/DataServiceConsole/DataServiceConsole.csproj
@@ -14,6 +14,7 @@
   <ItemGroup>
     <ProjectReference Include="..\AWSDataService\AWSDataService.csproj" />
     <ProjectReference Include="..\DataServiceCore\DataServiceCore.csproj" />
+    <ProjectReference Include="..\SteamService\SteamService.csproj" />
   </ItemGroup>
 
 </Project>
