Initial SteamService tests on Lambda deploy

--- a/src/SteamService/SteamService.csproj
+++ b/src/SteamService/SteamService.csproj
@@ -15,6 +15,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="DryIoc.dll" Version="4.7.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\DataServiceCore\DataServiceCore.csproj" />
   </ItemGroup>
 
