Added Linux environment steam redist

--- a/src/SteamService/SteamService.csproj
+++ b/src/SteamService/SteamService.csproj
@@ -5,10 +5,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="libsteam_api.so" />
     <None Remove="steam_api64.dll" />
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="libsteam_api.so">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="steam_api64.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
