--- a/src/SteamService/SteamService.csproj
+++ b/src/SteamService/SteamService.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
@@ -20,6 +20,7 @@
 
   <ItemGroup>
     <PackageReference Include="DryIoc.dll" Version="4.7.2" />
+    <PackageReference Include="SteamWebAPI2" Version="4.3.0" />
   </ItemGroup>
 
   <ItemGroup>
