--- a/src/iBotSotALambda.Tests/iBotSotALambda.Tests.csproj
+++ b/src/iBotSotALambda.Tests/iBotSotALambda.Tests.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="Amazon.Lambda.TestUtilities" Version="1.2.0" />
     <PackageReference Include="Amazon.Lambda.APIGatewayEvents" Version="2.4.0" />
     <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.3.101" />
+    <PackageReference Include="AWSSDK.SimpleSystemsManagement" Version="3.5.10.2" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.5.0" />
     <PackageReference Include="xunit" Version="2.3.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
