--- a/src/iBotSotALambda/iBotSotALambda.csproj
+++ b/src/iBotSotALambda/iBotSotALambda.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Amazon.Lambda.AspNetCoreServer" Version="5.3.0" />
+    <PackageReference Include="AWSSDK.SimpleSystemsManagement" Version="3.5.10.2" />
     <PackageReference Include="DryIoc.dll" Version="4.7.2" />
   </ItemGroup>
   <ItemGroup>
