--- a/src/iBotSotALambda/iBotSotALambda.csproj
+++ b/src/iBotSotALambda/iBotSotALambda.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="Amazon.Lambda.AspNetCoreServer" Version="5.3.1" />
     <PackageReference Include="AWSSDK.SimpleSystemsManagement" Version="3.5.10.2" />
+    <PackageReference Include="AWSXRayRecorder" Version="2.10.0" />
     <PackageReference Include="DryIoc.dll" Version="4.7.4" />
   </ItemGroup>
   <ItemGroup>
