--- a/src/iBotSotALambda/iBotSotALambda.csproj
+++ b/src/iBotSotALambda/iBotSotALambda.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="AWSSDK.SimpleSystemsManagement" Version="3.5.10.2" />
     <PackageReference Include="AWSXRayRecorder" Version="2.10.0" />
     <PackageReference Include="DryIoc.dll" Version="4.7.4" />
+    <PackageReference Include="DryIoc.Microsoft.DependencyInjection" Version="5.1.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AWSDataService\AWSDataService.csproj" />
