--- a/src/AWSDataService/AWSDataService.csproj
+++ b/src/AWSDataService/AWSDataService.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.5.4.34" />
     <PackageReference Include="AWSSDK.TimestreamQuery" Version="3.5.1.34" />
     <PackageReference Include="AWSSDK.TimestreamWrite" Version="3.5.1.33" />
+    <PackageReference Include="AWSXRayRecorder" Version="2.10.0" />
   </ItemGroup>
 
   <ItemGroup>
