--- a/src/AWSDataService/AWSDataService.csproj
+++ b/src/AWSDataService/AWSDataService.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.7.1.1" />
+    <PackageReference Include="AWSSDK.S3" Version="3.7.8.4" />
     <PackageReference Include="AWSSDK.TimestreamQuery" Version="3.7.1.1" />
     <PackageReference Include="AWSSDK.TimestreamWrite" Version="3.7.1.1" />
     <PackageReference Include="AWSXRayRecorder" Version="2.10.1" />
