--- a/src/DataServiceCore/DataServiceCore.csproj
+++ b/src/DataServiceCore/DataServiceCore.csproj
@@ -1,11 +1,19 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="..\ext\dll\libzfp.dll" Link="libzfp.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Utf8Json" Version="1.3.7" />
+    <PackageReference Include="zfp-dotnet" Version="0.0.0.1" />
+    <PackageReference Include="zfp-dotnet-runtime" Version="0.0.0.1" />
   </ItemGroup>
 
 </Project>
