--- a/src/iBotSotALambda/iBotSotALambda.csproj
+++ b/src/iBotSotALambda/iBotSotALambda.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <GenerateRuntimeConfigurationFiles>true</GenerateRuntimeConfigurationFiles>
@@ -12,6 +12,7 @@
     <PackageReference Include="Amazon.Lambda.AspNetCoreServer" Version="7.0.0" />
     <PackageReference Include="Anemonis.AspNetCore.RequestDecompression" Version="1.10.0" />
     <PackageReference Include="AWSSDK.SimpleSystemsManagement" Version="3.7.11.1" />
+    <PackageReference Include="AWSXRayRecorder" Version="2.10.1" />
     <PackageReference Include="DryIoc.dll" Version="4.8.4" />
     <PackageReference Include="DryIoc.Microsoft.DependencyInjection" Version="5.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.ResponseCompression" Version="2.2.0" />
