--- a/src/iBotSotALambda/Dockerfile
+++ b/src/iBotSotALambda/Dockerfile
@@ -1,7 +1,11 @@
 #See https://aka.ms/containerfastmode to understand how Visual Studio uses this Dockerfile to build your images for faster debugging.
 FROM mcr.microsoft.com/dotnet/aspnet:3.1
+
+COPY entrypoint.sh /entrypoint.sh
+RUN chmod +x /entrypoint.sh
+
 COPY xray /usr/bin/xray-daemon
-CMD xray-daemon -f /var/log/xray-daemon.log &
 COPY . app/
 WORKDIR /app
-ENTRYPOINT ["dotnet", "iBotSotALambda.dll"]
+#ENTRYPOINT ["dotnet", "iBotSotALambda.dll"]
+ENTRYPOINT ["/entrypoint.sh"]
