--- a/src/iBotSotALambda/iBotSotALambda.csproj
+++ b/src/iBotSotALambda/iBotSotALambda.csproj
@@ -27,5 +27,8 @@
     <None Update="Dockerfile">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="entrypoint.sh">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 </Project>
